# VCPicker

./: README.md  meson.build  package.sh  vcpicker_0.1.0_amd64.deb  vcpicker_1.0.0-1_amd64.deb
data/: gschemas.compiled  meson.build  org.vaxp.ColorPicker.desktop  vaxp-color-picker.gresource.xml
data/ui/: window.ui
debian/: control  debhelper-build-stamp  files  vcpicker.substvars
debian/.debhelper/vcpicker/: dbgsym-build-ids
debian/.debhelper/vcpicker/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/vcpicker/dbgsym-root/usr/share/doc/: vcpicker-dbgsym
debian/vcpicker/DEBIAN/: control  md5sums
debian/vcpicker/usr/share/applications/: org.vaxp.ColorPicker.desktop
debian/vcpicker/usr/share/doc/vcpicker/: copyright
debian/vcpicker/usr/share/glib-2.0/schemas/: org.vaxp.ColorPicker.gschema.xml
src/: main.c  meson.build
src/core/: color.c  color.h  palette.c  palette.h
src/portal/: picker.c  picker.h
src/ui/: headerbar.c  headerbar.h  window.c  window.h
